--- a/webgl/index.html
+++ b/webgl/index.html
@@ -4,11 +4,43 @@
 <title>Three.js test diagram</title>
 <style>
 	body { margin: 0; }
-	canvas { width: 100%; height: 100% }
 </style>
 
 <!-- GSL shaders -->
-<script type="x-shader/x-vertex" id="vertexshader">
+
+<script type="x-shader/x-fragment" id="initialParticleField">
+	attribute vec2 particleUV;
+
+	void main() {
+		// place particles in a grid with no initial velocity
+		return vec4(texelSpaceToClipSpace(particleUV), 0, 0);
+	}
+
+</script>
+
+<script type="x-shader/x-fragment" id="initialVelocityField">
+
+	void main() {
+		vec2 uv = gl_FragCoord.xy / resolution.xy;
+
+		// build velocity field with gradiant sloping upwards.
+		return vec4(texelSpaceToSimSpace(vec2(uv.y, 0)), 0, 0);
+	}
+</script>
+
+<script type="x-shader/x-fragment" id="initialDivergenceField">
+
+	// we have the Dirichlet conditions of 0 at the boundary.
+	// TODO: we need to somehow add geometry for shading the boundaries.
+		if (grid_coord.i == scale_constants.window.height - 1 || grid_coord.j == scale_constants.window.width - 1 || grid_coord.i == 0 || grid_coord.j == 0) {
+			return Float32Array.from([0.0, 0.0, 0.0, 1.0]);
+		}
+
+		return Float32Array.from([1.0, 1.0, 1.0, 1.0]);
+</script>
+
+<!-- default shaders -->
+<script type="x-shader/x-vertex" id="vertexShader">
 	varying vec2 vUv;
 
 	void main() {
@@ -18,20 +50,167 @@
 
 </script>
 
-<script type="x-shader/x-fragment" id="fragmentshader">
+<script type="x-shader/x-fragment" id="defaultShader">
+	uniform sampler2D outputTexture;
 	varying vec2 vUv;
-	uniform sampler2D texture;
 
 	void main() {
-		vec2 p = vUv;
-		if (p.x > .5) {
-			p.x = 1.0 - p.x;
-		} 
+		gl_FragColor = texture2D(outputTexture, vUv);
+	}
 
-		gl_FragColor = texture2D(texture, p);	
+</script>
+
+<!-- visualizations -->
+<script type="x-shader/x-fragment" id="pressureFieldVisualization">
+	uniform sampler2D outputTexture;
+	varying vec2 vUv;
+
+	void main() {
+		// the largest value should be roughly in the center (for our test data)
+		// so we choose appropriately.
+		float scale = 1.0 / texture2D(outputTexture, vec2(.5, .5)).x;
+
+		float pressureField = texture2D(outputTexture, vUv).x * scale;
+		gl_FragColor = vec4(pressureField, 0, 0, 1.0);
+	}
+</script>
+
+<!-- velocity field visualization -->
+<script type="x-shader/x-fragment" id="velocityFieldVisualization">
+	uniform sampler2D velocityTexture;
+	varying vec2 vUv;
+
+	void main() {
+		vec2 v = texture2D(velocityTexture, vUv).xy;
+
+		v.xy *= .999; // cool the color a bit
+
+		gl_FragColor = vec4(v, 0, 1);
+	}
+</script>
+
+<!-- shaders for particle field advected by the fluid -->
+<script type="x-shader/x-vertex" id="particleVertexShader">
+	
+
+	attribute vec2 particleUV; // the index into the particle data texture
+
+	uniform sampler2D particleVariable;
+	uniform float size;
+
+	void main() {
+		// we don't scale point size based on world coordinates.
+		gl_PointSize 		  = size;
+
+		vec2 particlePos 	  = texture2D(particleVariable, particleUV).xy;
+
+		gl_Position 		  = projectionMatrix * modelViewMatrix * vec4(particlePos, 0, 1);
+	}
+</script>
+
+<script type="x-shader/x-fragment" id="particleFragmentShader">
+	uniform vec3 color;
+
+	void main() {
+		gl_FragColor = vec4(color, 1.0);
+	}
+</script>
+
+<!-- computation steps. Used with GPUComputationRenderer so we use some built-in variables. -->
+
+<script type="x-shader/x-fragment" id="utilityFunctions">
+	vec2 texelSpaceToClipSpace(vec2 texelCoord) {
 		
 	}
 
+	vec2 texelSpaceToSimSpace(vec2 texelCoord) {
+
+	}
+	vec2 clipSpaceToTexelSpace(vec2 clipCoord) {
+
+	}
+</script>
+<!-- 
+stepParticles:
+does explicit forward Euler to recover particle trajectories from the velocity field.
+-->
+<script type="x-shader/x-fragment" id="particleStepShader">
+
+	uniform float dt;
+	uniform float dragCoefficient;
+
+	void main() {
+		vec2 uv = gl_FragCoord.xy / resolution.xy;
+
+		// find the position of the particle indexed by texel coordinates.
+		vec2 particlePos 	  = texture2D(particleVariable, uv).xy;
+		vec2 particleVelocity = texture2D(particleVariable, uv).zw;
+
+		// look at the velocity field and see where we're going
+		vec2 v = 1000.0 * vec2(uv.y, 0.0);
+
+		// we add a bit of drag and account for existing particle velocity
+		v *= dragCoefficient;
+
+		v -= particleVelocity * dragCoefficient;
+
+		// we track velocity and position so that we can apply drag (it looks cooler)
+		particleVelocity = v;
+		particlePos += dt * v;
+
+		// now store this information in the texture
+		//gl_FragColor = vec4(particlePos, particleVelocity);
+		gl_FragColor = vec4(particlePos, particleVelocity);
+	}
+</script>
+
+<script type="x-shader/x-fragment" id="divergenceShader">
+	void main() {
+		vec2 uv = gl_FragCoord.xy / resolution.xy;
+
+		gl_FragColor = texture2D(divergenceTexture, uv);
+
+	}
+</script>
+
+<script type="x-shader/x-fragment" id="velocityShader">
+
+	void main() {
+		vec2 uv = gl_FragCoord.xy / resolution.xy;
+
+		// for now, we just pass through
+		gl_FragColor = texture2D(velocityVariable, uv);
+
+	}
+</script>
+
+<script type="x-shader/x-fragment" id="pressureShader">
+
+	// the grid size
+	uniform float dx;
+
+	void main() {
+		vec2 uv = gl_FragCoord.xy / resolution.xy;
+
+		// do one step of Jacobi iteration (assuming we CLAMP_TO_BOUNDARY) the texture coordinates.
+		float left = texture2D(pressureTexture, uv - vec2(dx, 0)).x;
+		float right = texture2D(pressureTexture, uv + vec2(dx, 0)).x;
+		float top = texture2D(pressureTexture, uv + vec2(0, dx)).x;
+		float bottom = texture2D(pressureTexture, uv - vec2(0, dx)).x;
+
+		// since we are solving for a scalar field, we store everything in the first coordinate.
+		float center = texture2D(divergenceTexture, uv).x;
+
+		// stencil for solving pressure Poisson equation is given by
+		// [1/4 1/4 1/4 1/4 -b_grid.dx()^2 / 4]
+
+		// TODO: what is the correct sign on (dx)^2? Appears to be a positive sign and not a negative one?
+		// Article online says it should be positive
+		float computedPressure = .25 * (left + right + top + bottom  + (dx*dx) * center);
+
+		gl_FragColor = vec4(computedPressure, 0, 0, 1.0);
+
+	}
 </script>
 
 <!-- Copyright (c) 2010-2015 The MathJax Consortium -->
@@ -39,15 +218,23 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script type="text/javascript" src="scripts/three.js"></script>
-<script type="text/javascript" src="scripts/OrbitControls.js"></script>
-<script type="text/javascript" src="scripts/jquery-3.1.0.min.js"></script>
+<script type="text/javascript" src="lib/three.js/build/three.js"></script>
+<script type="text/javascript" src="lib/three.js/examples/js/controls/OrbitControls.js"></script>
+<script type="text/javascript" src="lib/three.js/examples/js/GPUComputationRenderer.js"></script>
 
+<script type="text/javascript" src="lib/jquery-3.1.0.min.js"></script>
+
+<script type="text/javascript" src="js/TextureUtils.js"></script>
+<script type="text/javascript" src="js/fluid/fluid.js"></script>
+<script type="text/javascript" src="js/fluid/particles.js"></script>
 <script type="text/javascript" src="js/fluid/RenderTarget.js"></script>
 <script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
+
+<script type="text/javascript" src="js/MainRenderScene.js"></script>
 </head>
 <body>
 
+<canvas id="fluidDisplay"></canvas>
 </body>
 </html>
